# mix_mind

./: .gitignore  PROMPT.md  README.md  gen_assets.cjs  gen_vu.cjs  index.html  package-lock.json  package.json  tailwind.config.js  test.cpp  test_shm.rs  vite.config.ts
artifacts/: dsp_new.txt
scripts/: gen_opto_kit.cjs
shared/: build_bindings.sh  mixmind_protocol.h  test_protocol.c
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/knowledge/genres/: acoustic.md  electronic.md  hiphop.md  jazz_classical.md  rock.md
src-tauri/assets/knowledge/instruments/: bass.md  drums.md  guitars.md  keys.md  strings_brass.md  vocals.md
src-tauri/assets/knowledge/mastering/: loudness_targets.md
src-tauri/assets/knowledge/mixing/: balance_lufs.md  fx_chain_logic.md  stereo_field.md
src-tauri/assets/knowledge/spatial/: delay_theory.md  modulation.md  reverb_theory.md
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/ai/: claude.rs  context.rs  mod.rs  openai.rs  prompts.rs  style_detector.rs
src-tauri/src/ai/knowledge/: mod.rs
src-tauri/src/audio/: analyzer.rs  decoder.rs  mod.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/state/: mod.rs
src/components/: Chat.tsx  HistoryPanel.tsx  Settings.tsx  TopBar.tsx  WaveformPlayer.tsx
src/components/designer/: Canvas.tsx  DynamicCanvas.tsx  ElementEditor.tsx  GeneratorSidebar.tsx  LayersPanel.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/components/fx/: DspEditor.tsx  EffectChain.tsx  MultiFxConsole.tsx  SlotView.tsx
src/components/fx/plugins/: OptoCompressor.tsx
src/components/ui/: Fader.tsx  Knob.tsx  LedButton.tsx  Meter.tsx  VuMeter.tsx
src/hooks/: useDesignSync.ts
src/modes/: DawMode.tsx  DesignMode.tsx  FileMode.tsx
src/store/: appStore.ts  designStore.ts  historyStore.ts  useVstStore.ts
src/utils/: exportToReact.ts
vst-multiefx/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditorXML.h  PluginProcessor.cpp  PluginProcessor.h  SharedMemoryWriter.h  install_vst3.bat
vst-multiefx/plugin-ui/: index.html  package-lock.json  package.json
vst-multiefx/plugin-ui/src/: App.tsx  index.css
vst-multiefx/plugin-ui/src/hooks/: useJuce.ts
vst-plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedMemoryWriter.cpp  install_vst3.bat
